--- a/lib/web/articles/list.jade
+++ b/lib/web/articles/list.jade
@@ -34,4 +34,4 @@ html(lang='en')
 
     script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js')
-    script(src='list.js')
+    script(src='list_article.js')
