added project back link

--- a/lib/web/articles/list.jade
+++ b/lib/web/articles/list.jade
@@ -6,6 +6,7 @@ html(lang='en')
 
   body.Global
     .L-wrap.L-hidden(data-bind='css: { "L-hidden": false }')
+      a(href='/projects/clear') Back to projects list
 
       header.TopHeader Files
 
